--- a/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/order/edit.html
+++ b/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/order/edit.html
@@ -71,13 +71,6 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="input-zipCode" class="col-sm-2 control-label">邮编</label>
-
-									<div class="col-sm-10">
-										<input class="form-control" id="input-zipCode" placeholder="请输入邮编" name="zipCode" th:value="*{zipCode}" type="text">
-									</div>
-								</div>
-								<div class="form-group">
 									<label for="input-phone" class="col-sm-2 control-label">联系电话</label>
 
 									<div class="col-sm-10">
@@ -113,9 +106,8 @@
 								<thead>
 									<tr>
 										<th style="width: 40%">商品名称</th>
-										<th style="width: 20%">数量</th>
-										<th style="width: 20%">单位</th>
-										<th style="width: 10%">排序号</th>
+										<th style="width: 20%">件数</th>
+										<th style="width: 20%">米数</th>
 										<th class="text-center command-column" style="width: 10%">操作</th>
 									</tr>
 								</thead>
@@ -123,15 +115,15 @@
 									<tr th:each="orderItem : *{orderItems}">
 										<td class="product-choice">
 											<div class="input-group">
-												<input type="hidden" name="product" th:value="${orderItem.product}?${orderItem.product.id}:''"> <input class="form-control"
+												<input type="hidden" name="product" th:value="${orderItem.product}?${orderItem.product.id}:''">
+												<input type="hidden" name="sn" th:value="${orderItem.sn}"> <input class="form-control"
 													placeholder="请选择商品" th:value="${orderItem.fullName}" readonly="readonly" type="text"> <span class="input-group-btn">
 													<button class="btn btn-default" type="button">选择商品</button>
 												</span>
 											</div>
 										</td>
-										<td><input class="form-control" name="quantity" th:value="${orderItem.quantity}" placeholder="请输入数量" type="text"></td>
-										<td><input class="form-control" name="unit" placeholder="请选择单位" type="text"></td>
-										<td><input class="form-control" name="sortNo" placeholder="请输入排序号" type="text"></td>
+										<td><input class="form-control" name="quantityPiece" th:value="${orderItem.quantityPiece}" placeholder="请输入件数" type="text"></td>
+										<td><input class="form-control" name="quantity" th:value="${orderItem.quantity}" placeholder="请输入米数" type="text"></td>
 										<td class="text-center command-column">
 											<div class="btn-group btn-group-sm">
 												<a class="btn btn-primary" href="javascript:;" onclick="$(this).closest('tr').remove();"> <i class="glyphicon glyphicon-remove"></i>
@@ -171,21 +163,18 @@
 				var $inputConsignee = $orderForm.find("input[name=consignee]");
 				var $inputAddress = $orderForm.find("input[name=address]");
 				var $inputPhone = $orderForm.find("input[name=phone]");
-				var $inputZipCode = $orderForm.find("input[name=zipCode]");
 
 				var setAddress = function() {
 					var selVal = $addressSelect.find("option:selected").val();
-					if (selVal.indexOf("|") < 0) {
+					if (!selVal||selVal.indexOf("|") < 0) {
 						$inputConsignee.val("");
 						$inputPhone.val("");
 						$inputAddress.val("");
-						$inputZipCode.val("");
 					} else {
 						var values = selVal.split("|");
 						$inputConsignee.val(values[0]);
 						$inputPhone.val(values[1]);
 						$inputAddress.val(values[2]);
-						$inputZipCode.val(values[3]);
 					}
 				}
 
@@ -203,7 +192,7 @@
 							$.each(resp, function(i, item) {
 								$addressSelect.append("<option" + (i == 0 ? "" : " selected='selected'") + " value='" + item.consignee + "|"
 										+ item.phone + "|" + item.detail + "|" + item.zipCode + "'>" + item.consignee + "  " + item.phone + "  "
-										+ item.detail + "  " + item.zipCode + "</option>");
+										+ item.detail + "</option>");
 							});
 
 							setAddress();
@@ -235,11 +224,13 @@
 					$button.on("click", function() {
 						var $button = $(this);
 						var $td = $button.closest("td");
-						var $value = $td.find("input[type=hidden]");
+						var $value = $td.find("input[type=hidden][name=product]");
+						var $sn = $td.find("input[type=hidden][name=sn]");
 						var $display = $td.find("input[type=text]");
 						showGridDialog("选择商品", base + "/product/select", base + "/product/page", function(item) {
 							if (item) {
 								$value.val(item.id);
+								$sn.val(item.sn);
 								$display.val(item.fullName);
 							}
 						});
@@ -256,31 +247,28 @@
 					var $td1 = $("<td />");
 					var $td2 = $("<td />");
 					var $td3 = $("<td />");
-					var $td4 = $("<td />");
-					var $td5 = $("<td />").addClass("text-center").addClass("command-column");
+					var $td4 = $("<td />").addClass("text-center").addClass("command-column");
 
 					var $input_group = $("<div class=\"input-group\" />");
 					var $input_group_hidden = $("<input type=\"hidden\" name=\"product\">");
+					var $input_sn_hidden = $("<input type=\"hidden\" name=\"sn\">");
 					var $input_group_text = $("<input class=\"form-control\" placeholder=\"请选择商品\" readonly=\"readonly\" type=\"text\">");
 					var $input_group_span = $("<span class=\"input-group-btn\"/>");
 					var $input_group_btn = $("<button class=\"btn btn-default\" type=\"button\">选择商品</button>");
 					$input_group_span.append($input_group_btn);
-					$input_group.append($input_group_hidden).append($input_group_text).append($input_group_span);
+					$input_group.append($input_group_hidden).append($input_sn_hidden).append($input_group_text).append($input_group_span);
 					$td1.append($input_group);
 
-					var $input_quantity = $("<input class=\"form-control\" name=\"quantity\" placeholder=\"请输入数量\" type=\"text\">");
-					$td2.append($input_quantity);
+					var $input_quantity_piece = $("<input class=\"form-control\" name=\"quantityPiece\" placeholder=\"请输入件数\" type=\"text\">");
+					$td2.append($input_quantity_piece);
 
-					var $input_unit = $("<input class=\"form-control\" name=\"unit\" placeholder=\"请选择单位\" type=\"text\">");
-					$td3.append($input_unit);
-
-					var $input_sort = $("<input class=\"form-control\" name=\"sortNo\" placeholder=\"请输入排序号\" type=\"text\">");
-					$td4.append($input_sort);
+					var $input_quantity = $("<input class=\"form-control\" name=\"quantity\" placeholder=\"请输入米数\" type=\"text\">");
+					$td3.append($input_quantity);
 
 					var $link_del = $("<a class=\"btn btn-primary btn-sm\" href=\"javascript:;\"> <i class=\"glyphicon glyphicon-remove\"></i></a>")
-					$td5.append($link_del);
+					$td4.append($link_del);
 
-					$tr.append($td1).append($td2).append($td3).append($td4).append($td5);
+					$tr.append($td1).append($td2).append($td3).append($td4);
 					$("#table-product>tbody").append($tr);
 
 					initShowProductDialogButton($input_group_btn);
@@ -289,7 +277,18 @@
 					});
 				});
 
-				initValidateForm($orderForm, "#/page/order");
+				initValidateForm($orderForm, "#/page/order", null, function($form) {
+					var orderItemsCount = 0;
+					$.each($("#table-product>tbody>tr"), function(i, tr) {
+						var $tr = $(tr);
+						$tr.find("input[name=product]").attr("name", "orderItems[" + i + "].product");
+						$tr.find("input[name=sn]").attr("name", "orderItems[" + i + "].sn");
+						$tr.find("input[name=quantity]").attr("name", "orderItems[" + i + "].quantity");
+						$tr.find("input[name=quantityPiece]").attr("name", "orderItems[" + i + "].quantityPiece");
+						orderItemsCount++;
+					});
+					$form.find("input[name=orderItemsCount]").val(orderItemsCount);
+				});
 			});
 		});
 	</script>
