--- a/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/product/index.html
+++ b/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/product/index.html
@@ -136,7 +136,7 @@
 											url : base + "/product/page",
 											post : function() {
 												var keyValues = $("#search-form").serialize();
-												return parseQueryString(keyValues);
+												return $c.parseQueryString(keyValues);
 											},
 											formatters : {
 												"lastModifiedByName" : function(column, row) {
