--- a/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/shipping/index.html
+++ b/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/shipping/index.html
@@ -3,11 +3,11 @@
 <body>
 	<section class="content-header">
 		<h1>
-			订单 <small>订单列表</small>
+			发货 <small>发货列表</small>
 		</h1>
 		<ol class="breadcrumb">
-			<li><a href="javascript:;"><i class="fa fa-file-archive-o"></i> 订单管理</a></li>
-			<li class="active">订单列表</li>
+			<li><a href="javascript:;"><i class="fa fa-file-archive-o"></i> 发货管理</a></li>
+			<li class="active">发货列表</li>
 		</ol>
 	</section>
 
@@ -15,7 +15,7 @@
 
 		<div class="mailbox-controls">
 			<div class="btn-group btn-group-sm">
-				<a class="btn btn-primary" href="#/page/order/add"> <i class="fa fa-plus"></i> 添加
+				<a class="btn btn-primary" href="#/page/shipping/add"> <i class="fa fa-plus"></i> 添加
 				</a>
 				<button aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">
 					批量 <span class="fa fa-caret-down"></span>
@@ -39,7 +39,7 @@
 			<form class="form-search form-inline">
 				<div class="box-body">
 					<div class="form-group">
-						<label for="search-sn" class="control-label">订单号</label> <input class="form-control" id="search-sn" placeholder="请输入订单号" name="sn" type="text">
+						<label for="search-sn" class="control-label">发货号</label> <input class="form-control" id="search-sn" placeholder="请输入发货号" name="sn" type="text">
 					</div>
 					<button type="submit" class="btn btn-primary btn-sm search-button">
 						<i class="fa fa-search"></i> 搜索
@@ -50,17 +50,15 @@
 
 		<div class="box box-primary">
 			<div class="box-body no-padding">
-				<table id="grid-order" class="table table-hover">
+				<table id="grid-shipping" class="table table-hover">
 					<thead>
 						<tr>
 							<th data-column-id="id" data-type="numeric" data-identifier="true" data-visible="false">ID</th>
-							<th data-column-id="sn">订单号</th>
-							<th data-column-id="name" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">名称</th>
-							<th data-column-id="orderStatus">订单状态</th>
-							<th data-column-id="paymentStatus" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">支付状态</th>
-							<th data-column-id="shippingStatus" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">配送状态</th>
-							<th data-formatter="customerName" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">客户</th>
-							<th data-formatter="operatorName" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">操作人</th>
+							<th data-column-id="sn">编号</th>
+							<th data-formatter="orderSn">订单号</th>
+							<th data-column-id="trackingNo" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">运单号</th>
+							<th data-column-id="consignee" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">收货人</th>
+							<th data-column-id="operator" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">操作人</th>
 							<th data-formatter="commands" data-css-class="command-column" data-width="120px" data-sortable="false" data-align="center"
 								data-header-align="center">操作</th>
 						</tr>
@@ -75,20 +73,17 @@
 	<script type="text/javascript">
 		requirejs([ "domReady", "bootgrid" ], function(ready) {
 			ready(function() {
-				activeMenu("order");
+				activeMenu("shipping");
 
-				var $grid = initBootGrid($("#grid-order"), base + "/order/page", $(".content"), {
-					"customerName" : function(column, row) {
-						return row.customer ? row.customer.name : "";
-					},
-					"operatorName" : function(column, row) {
-						return row.operator ? row.operator.name : "";
+				var $grid = initBootGrid($("#grid-shipping"), base + "/shipping/page", $(".content"), {
+					"orderSn" : function(column, row) {
+						return row.order ? row.order.sn : "";
 					}
-				}, "#/page/order/view/", "#/page/order/edit/", base + "/order/delete");
+				}, "#/page/shipping/view/", "#/page/shipping/edit/", base + "/shipping/delete");
 
 				$("#delete-button").on("click", function() {
 					actionWithSelectedRows($grid, function(grid, selectedRows) {
-						deleteRow(grid, selectedRows, base + "/order/delete");
+						deleteRow(grid, selectedRows, base + "/shipping/delete");
 					});
 				});
 			});
