--- a/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/supplier/index.html
+++ b/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/supplier/index.html
@@ -3,11 +3,11 @@
 <body>
 	<section class="content-header">
 		<h1>
-			管理员 <small>管理员列表</small>
+			供应商 <small>供应商列表</small>
 		</h1>
 		<ol class="breadcrumb">
 			<li><a href="javascript:;"><i class="fa fa-cogs"></i> 系统管理</a></li>
-			<li class="active">管理员列表</li>
+			<li class="active">供应商列表</li>
 		</ol>
 	</section>
 
@@ -15,7 +15,7 @@
 
 		<div class="mailbox-controls">
 			<div class="btn-group btn-group-sm">
-				<a class="btn btn-primary" href="#/page/admin/add"> <i class="fa fa-plus"></i> 添加
+				<a class="btn btn-primary" href="#/page/supplier/add"> <i class="fa fa-plus"></i> 添加
 				</a>
 				<button aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" class="btn btn-primary dropdown-toggle"
 					type="button">
@@ -40,12 +40,8 @@
 			<form id="search-form" class="form-search form-inline">
 				<div class="box-body">
 					<div class="form-group">
-						<label for="search-username" class="control-label">账号</label> <input class="form-control" id="search-username"
-							placeholder="请输入账号" name="username" type="text">
-					</div>
-					<div class="form-group">
-						<label for="search-name" class="control-label">姓名</label> <input class="form-control" id="search-name"
-							placeholder="请输入姓名" name="name" type="text">
+						<label for="search-name" class="control-label">名称</label> <input class="form-control" id="search-name"
+							placeholder="请输入名称" name="name" type="text">
 					</div>
 					<button type="submit" class="btn btn-primary btn-sm" id="search-button">
 						<i class="fa fa-search"></i> 搜索
@@ -56,12 +52,14 @@
 
 		<div class="box box-primary">
 			<div class="box-body no-padding">
-				<table id="grid-admin" class="table table-hover">
+				<table id="grid-supplier" class="table table-hover">
 					<thead>
 						<tr>
 							<th data-column-id="id" data-type="numeric" data-identifier="true" data-visible="false">ID</th>
-							<th data-column-id="username">账号</th>
-							<th data-column-id="name">姓名</th>
+							<th data-column-id="name">名称</th>
+							<th data-column-id="contact" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">联系人</th>
+							<th data-column-id="phone" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">联系电话</th>
+							<th data-column-id="area" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">区域</th>
 							<th data-formatter="commands" data-css-class="command-column" data-width="120px" data-sortable="false"
 								data-align="center" data-header-align="center">操作</th>
 						</tr>
@@ -78,7 +76,7 @@
 				[ "domReady", "bootgrid" ],
 				function(ready) {
 					ready(function() {
-						activeMenu("management_admin");
+						activeMenu("management_supplier");
 
 						var deleteRow = function(grid, ids) {
 							$.confirm({
@@ -88,7 +86,7 @@
 									confirm : {
 										text : "确定",
 										action : function() {
-											$.post(base + "/admin/delete", {
+											$.post(base + "/supplier/delete", {
 												ids : ids
 											}, function(resp) {
 												if (resp.success) {
@@ -123,10 +121,10 @@
 							});
 						};
 
-						var gridAdmin = $("#grid-admin")
+						var gridSupplier = $("#grid-supplier")
 								.bootgrid(
 										{
-											url : base + "/admin/page",
+											url : base + "/supplier/page",
 											post : function() {
 												var keyValues = $("#search-form").serialize();
 												return $c.parseQueryString(keyValues);
@@ -135,7 +133,7 @@
 												"commands" : function(column, row) {
 													return "\
 			<div class=\"btn-group btn-group-sm\" data-row-id=\""+row.id+"\">\
-				<a class=\"btn btn-primary\" href=\"#/page/admin/edit/"+row.id+"\">\
+				<a class=\"btn btn-primary\" href=\"#/page/supplier/edit/"+row.id+"\">\
 					<i class=\"glyphicon glyphicon-edit\"></i>\
 				</a>\
 				<a aria-expanded=\"false\" aria-haspopup=\"true\" data-toggle=\"dropdown\" \
@@ -151,7 +149,7 @@
 											}
 										});
 
-						gridAdmin.on("loaded.rs.jquery.bootgrid", function() {
+						gridSupplier.on("loaded.rs.jquery.bootgrid", function() {
 							var $table = $(this);
 							$table.find(".dropdown-toggle").dropdown();
 
@@ -162,13 +160,13 @@
 						});
 						
 						var actionWithSelectedRows = function(action) {
-							var selectedRows = gridAdmin.bootgrid("getSelectedRows");
+							var selectedRows = gridSupplier.bootgrid("getSelectedRows");
 							if (selectedRows && selectedRows.length > 0) {
-								action(gridAdmin, selectedRows);
+								action(gridSupplier, selectedRows);
 							} else {
 								$.alert({
 									title : "提示",
-									content : "请至少选择一个管理员",
+									content : "请至少选择一个供应商",
 									buttons : {
 										ok : {
 											text : "确定"
@@ -184,7 +182,7 @@
 						});
 
 						var refreshGrid = function() {
-							gridAdmin.bootgrid("reload");
+							gridSupplier.bootgrid("reload");
 						}
 
 						$("#search-button").on("click", function() {
