--- a/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/order/index.html
+++ b/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/order/index.html
@@ -55,10 +55,9 @@
 						<tr>
 							<th data-column-id="id" data-type="numeric" data-identifier="true" data-visible="false">ID</th>
 							<th data-column-id="sn">订单号</th>
-							<th data-column-id="name" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">名称</th>
-							<th data-column-id="orderStatus">订单状态</th>
-							<th data-column-id="paymentStatus" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">支付状态</th>
-							<th data-column-id="shippingStatus" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">配送状态</th>
+							<th data-formatter="orderStatus">订单状态</th>
+							<th data-formatter="paymentStatus" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">支付状态</th>
+							<th data-formatter="shippingStatus" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">配送状态</th>
 							<th data-formatter="customerName" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">客户</th>
 							<th data-formatter="operatorName" data-css-class="hidden-xs hidden-sm" data-header-css-class="hidden-xs hidden-sm">操作人</th>
 							<th data-formatter="commands" data-css-class="command-column" data-width="120px" data-sortable="false" data-align="center"
@@ -78,6 +77,35 @@
 				activeMenu("order");
 
 				var $grid = initBootGrid($("#grid-order"), base + "/order/page", $(".content"), {
+					"orderStatus" : function(column, row) {
+						var status = {
+							"unconfirmed" : "未确认",
+							"confirmed" : "已确认",
+							"completed" : "已完成",
+							"cancelled" : "已取消"
+						};
+						return status[row.orderStatus];
+					},
+					"paymentStatus" : function(column, row) {
+						var status = {
+							"unpaid" : "未支付",
+							"partialPayment" : "部分支付",
+							"paid" : "已支付",
+							"partialRefunds" : "部分退款",
+							"refunded" : "已退款"
+						};
+						return status[row.paymentStatus];
+					},
+					"shippingStatus" : function(column, row) {
+						var status = {
+							"unshipped" : "未发货",
+							"partialShipment" : "部分发货",
+							"shipped" : "已发货",
+							"partialReturns" : "部分退货",
+							"returned" : "已退货"
+						};
+						return status[row.shippingStatus];
+					},
 					"customerName" : function(column, row) {
 						return row.customer ? row.customer.name : "";
 					},
