--- a/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/shipping/edit.html
+++ b/brick-shop/brick-shop-console/src/main/resources/META-INF/templates/shipping/edit.html
@@ -43,7 +43,13 @@
 										</div>
 									</div>
 								</div>
+								<div class="form-group">
+									<label for="input-trackingNo" class="col-sm-2 control-label">运单号</label>
 
+									<div class="col-sm-10">
+										<input class="form-control" id="input-trackingNo" placeholder="请输入运单号" name="trackingNo" th:value="*{trackingNo}" type="text">
+									</div>
+								</div>
 								<div class="form-group">
 									<label for="input-consignee" class="col-sm-2 control-label">收货人</label>
 
@@ -93,13 +99,15 @@
 							<table id="table-product" class="table table-bordered">
 								<thead>
 									<tr>
-										<th style="width: 40%">商品名称</th>
-										<th style="width: 20%">数量</th>
-										<th style="width: 20%">单位</th>
+										<th style="width: 30%">商品名称</th>
+										<th style="width: 25%">总件数／已发件数／剩余件数</th>
+										<th style="width: 25%">总米数／已发米数／剩余米数</th>
+										<th style="width: 10%">发货件数</th>
+										<th style="width: 10%">发货米数</th>
 									</tr>
 								</thead>
 								<tbody>
-									
+
 								</tbody>
 							</table>
 						</div>
@@ -128,13 +136,13 @@
 				var $inputAddress = $shippingForm.find("input[name=address]");
 				var $inputPhone = $shippingForm.find("input[name=phone]");
 				var $inputMemo = $shippingForm.find("textarea[name=memo]");
-				
+
 				var $productBody = $("#table-product>tbody");
 
 				var refreshAddress = function() {
 					$addressSelect.empty();
 					$productBody.empty();
-					
+
 					var orderId = $orderId.val();
 					if (orderId && orderId != "") {
 						$.get(base + "/order/detail", {
@@ -144,27 +152,33 @@
 							$inputPhone.val(resp.phone);
 							$inputAddress.val(resp.address);
 							$inputMemo.text(resp.memo);
-							
+
 							$.each(resp.orderItems, function(i, item) {
 								var $tr = $("<tr />");
 								var $td1 = $("<td />");
 								var $td2 = $("<td />");
 								var $td3 = $("<td />");
-								
+								var $td4 = $("<td />");
+								var $td5 = $("<td />");
+
 								$td1.text(item.fullName);
-								$td2.text(item.unShippedQuantity);
-								$td3.append($("<input type='text' >"));
-								
-								$tr.append($td1).append($td2).append($td3);
+								$td1.append($("<input type='hidden' name='shippingItems["+i+"].sn' value='"+item.sn+"' >"));
+								$td1.append($("<input type='hidden' name='shippingItems["+i+"].name' value='"+item.fullName+"' >"));
+								$td2.text(item.quantityPiece + " / " + item.shippedQuantityPiece + " / " + item.unShippedQuantityPiece);
+								$td3.text(item.quantity + " / " + item.shippedQuantity + " / " + item.unShippedQuantity);
+								$td4.append($("<input type='text' name='shippingItems["+i+"].quantityPiece' >"));
+								$td5.append($("<input type='text' name='shippingItems["+i+"].quantity' >"));
+
+								$tr.append($td1).append($td2).append($td3).append($td4).append($td5);
 								$productBody.append($tr);
 							});
-							
+
 						}, "json");
 					}
 				}
 
 				refreshAddress();
-				
+
 				var $selectGrid = null;
 				$("#input-order-button").on("click", function() {
 					showGridDialog("选择订单", base + "/order/select", base + "/order/page", function(item) {
